Make modal controlled & change css

--- a/public/style.css
+++ b/public/style.css
@@ -23,7 +23,12 @@
     width: 60%;
 }
   
-.counterWrapper {
+#dropdownContainerLeft {
+    width: 70%;
+}
+
+#dropdown {
+    width: 60%;
 }
   
 .counter {
