--- a/public/style.css
+++ b/public/style.css
@@ -68,3 +68,11 @@
 #selectSubtaskPrompt {
     text-align: center;
 }
+
+#graphDiv {
+    margin: auto;
+    height: 500px;
+    width: 1000px;
+    border: 3px solid green;
+    padding: 10px;
+}
