--- a/public/style.css
+++ b/public/style.css
@@ -18,7 +18,7 @@
 }
 
 #dropdownContainerLeft {
-    width: 70%;
+    min-width: 70%;
 }
 
 #dropdown {
@@ -136,3 +136,4 @@
         cursor: pointer;
         /* Cursor on hover */
     }
+    
